initial SCSS experiments

--- a/index.html
+++ b/index.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS modules with Babel</title>
     <link rel="stylesheet" href="./css/styles.css" />
-  </head>
-  <body>
+</head>
+
+<body>
     <div id="app">
-      <h1></h1>
+        <h1>Card project selector</h1>
     </div>
+
+    <div class="card">
+        <h3 class="card__title">Hola</h3>
+        <p class="card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum dicta tempora consequatur nesciunt molestias? Nihil asperiores quas, vitae non dolores ducimus explicabo obcaecati iure porro amet numquam libero, perspiciatis id!</p>
+        <footer class="card__footer">
+            <section class="card__footer__social">FB LOGO</section>
+            <section class="card__footer__social">INSTA LOGO</section>
+        </footer>
+    </div>
+
     <script src="index.js" type="module"></script>
-  </body>
+</body>
+
 </html>
