--- a/index.html
+++ b/index.html
@@ -6,22 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS modules with Babel</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
-    <div id="app">
-        <h1>Card project selector</h1>
-    </div>
+    <h1 class="main-title">Select a card</h1>
 
-    <div class="card">
-        <h3 class="card__title">Hola</h3>
-        <p class="card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum dicta tempora consequatur nesciunt molestias? Nihil asperiores quas, vitae non dolores ducimus explicabo obcaecati iure porro amet numquam libero, perspiciatis id!</p>
-        <footer class="card__footer">
-            <section class="card__footer__social">FB LOGO</section>
-            <section class="card__footer__social">INSTA LOGO</section>
-        </footer>
-    </div>
+    <section class="cards-container" id="cards">
+
+    </section>
 
     <script src="index.js" type="module"></script>
 </body>
